Fixed background pegs layout bug

--- a/assets/css/mas712.scss
+++ b/assets/css/mas712.scss
@@ -4,11 +4,11 @@
 
 html, body {
 	margin: 0;
-	height: 100%;
 }
 
 body {
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+  position: relative;
 }
 
 /* Peg grid */
